Fix issue with travis and go.mod

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,6 @@ env:
   global:
     - KUBECONFIG=$HOME/.kube/config
     - KUBERNETES_VERSION=$(curl -k -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)
-    - GO111MODULE=on
 
 before_install:
   # Setup kubectl
@@ -27,14 +26,13 @@ before_install:
   - sudo mv kubectl /usr/local/bin/
 
   # Get tools
-  - export GO111MODULE=off; go get sigs.k8s.io/kind
+  - go get sigs.k8s.io/kind
 
   # Create a new Kubernetes cluster using KinD
   - kind create cluster
   - kubectl cluster-info
 
 script:
-  - export GO111MODULE=on
   - cd $GOPATH/src/github.com/rh-messaging/shipshape
   - make
   - make cluster-test
