--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ env:
 
 before_install:
   # Setup kubectl
+  - unset GO111MODULE
   - curl -Lo kubectl https://storage.googleapis.com/kubernetes-release/release/${KUBERNETES_VERSION}/bin/linux/amd64/kubectl
   - chmod +x kubectl
   - sudo mv kubectl /usr/local/bin/
