Initial support for Skupper operator
* Initial support for skupper expose
* Added initial support for connect and connection-token
* Fixed incorrect place to check for KubeConfig value
* Added create and delete for dynamic k8s client
* Created method for generating Skupper instances
* Added method that loads Unstructured type from yaml
* Added methods for manipulating resources based on GroupVersionResource object
* New method WaitForService
* Waiting for connection-token to finish before returning
* Support for waiting on Pod Status
* Removed useless for statement after PR review
* Updated travis script to install skupper

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ before_install:
   - sudo mv kubectl /usr/local/bin/
 
   # Get tools
+  - git clone https://github.com/skupperproject/skupper-cli.git && cd skupper-cli && make build && cp skupper $GOPATH/bin
   - env GO111MODULE=off go get sigs.k8s.io/kind
   - env GO111MODULE=off go get github.com/jfeliu007/goplantuml/parser
   - env GO111MODULE=off go get github.com/jfeliu007/goplantuml/cmd/goplantuml
