--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ before_install:
 
   # Get tools
   - git clone https://github.com/skupperproject/skupper-cli.git && cd skupper-cli && make build && cp skupper $GOPATH/bin
-  - env GO111MODULE=off go get sigs.k8s.io/kind
+  - env GO111MODULE=off go install sigs.k8s.io/kind@latest
   - env GO111MODULE=off go get github.com/jfeliu007/goplantuml/parser
   - env GO111MODULE=off go get github.com/jfeliu007/goplantuml/cmd/goplantuml
   - cd $GOPATH/src/github.com/jfeliu007/goplantuml
