--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,8 @@ sudo: required
 dist: bionic
 language: go
 go:
-  - 1.13.x
-  - 1.14.x
-  - 1.15.x
+  - 1.16.x
+  - 1.17.x
 
 go_import_path: github.com/rh-messaging/shipshape
 
@@ -39,7 +38,7 @@ before_install:
 script:
   - cd $GOPATH/src/github.com/rh-messaging/shipshape
   - make uml
-  - env GO111MODULE=on make
-  - env GO111MODULE=on make unit-tests
-  - env GO111MODULE=on make cluster-test
+  - env make
+  - env make unit-tests
+  - env make cluster-test
 
